<resources>
    <string name="app_name">Shoes App</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="home">Home</string>
    <string name="my_category">Categories</string>
    <string name="my_order">Orders</string>
    <string name="profile">Profile</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <string name="aboutUs">Welcome to ShoeStore! Our mission is to provide high-quality shoes at affordable prices. With a wide range of styles and brands, we cater to all tastes and preferences.</string>
    <string name="ourStory">Founded in 2024, ShoeStore started with a small team passionate about footwear. Over the years, we have grown into a trusted brand with customers all over the world. We are committed to providing exceptional service and the latest trends in footwear.</string>

    <string name="privacyPolicy">Welcome to ShoeStore! This privacy policy explains how to collect, use, disclose, and safeguard your information when you visit our application. Please read this privacy policy carefully.</string>
    <string name="privacyPolicyWe">We may collect information about you in a variety of ways, The information we may collect via the application depends on the content and materials you use, and includes personal data, demographic data, and other information.</string>
    <string name="privacyPolicyYou">Having accurate information about you permits us to provide you with a smooth, efficient, and customized experience. Specifically, we may use information collected about you via tha application to create and manage your account, deliver targeted advertising and other purposes.</string>
    <string name="our_story">Our Story</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_dhruv">Email: dhruvgajera05@gmail.com \nPhone: +91 90237 55654</string>
    <string name="email_prince">Email: akbariprince648@gmail.com \nPhone: +91 63535 50989</string>
    <string name="email_ashish">Email: ashishpatil05050@gmail.com \nPhone: +91 87339 01882</string>
    <string name="add_location">Add Location</string>
    <string name="current_address">Current Address</string>
    <string name="add_address">Add Address</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="total_product_price">Total Product Price</string>
    <string name="total_discount">Total Discount</string>
    <string name="additional_fees">Additional Fees</string>
    <string name="order_total">Order Total</string>
    <string name="view_price_details">VIEW PRICE DETAILS</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="provide_your_email_account_nfor_which_you_want_to_reset_your_pssword">Provide your email account\nfor which you want to reset your pssword</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">back</string>
    <string name="select_language">Select Language</string>
    <string name="login">Login</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="details">Details</string>
    <string name="payment">Payment</string>
    <string name="summary">Summary</string>
    <string name="add_new_address">+ ADD NEW ADDRESS</string>
    <string name="deliver_to_this_address">Deliver to this Address</string>
    <string name="select_payment_method">Select payment method:</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="extra_discount_with_bank_offers">Extra discount with bank offers</string>
    <string name="view_offers">View Offers</string>
    <string name="last_used">Last Used</string>
    <string name="gpay">GPay</string>
    <string name="upi">UPI</string>
    <string name="offers_available">Offers Available</string>
    <string name="wallet">Wallet</string>
    <string name="debit_credit_cards">Debit/Credit Cards</string>
    <string name="net_banking">Net Banking</string>
    <string name="nike">Nike</string>
    <string name="select_size">Select Size</string>
    <string name="description">Description</string>
    <string name="contact_details">Contact Details:</string>
    <string name="deliver_to">Deliver To:</string>
    <string name="order_date">Order Date:</string>
    <string name="arriving_date">Arriving Date:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="information_we_collect">Information We Collect</string>
    <string name="use_of_your_information">Use of Your Information</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_create_your_account">Please create your account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="aready_have_an_account">Aready have an account?</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_debit_atm_card">Credit / Debit / ATM Card</string>
    <string name="wallets">Wallets</string>
    <string name="save">Save</string>
    <string name="size">Size.</string>
    <string name="categories">Categories</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="rebook">Rebook</string>
    <string name="crocs">Crocs</string>
    <string name="bata">Bata</string>
    <string name="red_tape">Red Tape</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kids">Kids</string>
    <string name="price">Price</string>
    <string name="apply">Apply</string>
    <string name="choose_your_best_shoes">Choose Your Best Shoes</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_history">Order History</string>
    <string name="gujarati">Gujarati</string>
    <string name="textview">TextView</string>
    <string name="conntinue">Continue</string>
    <string name="phonepay">PhonePay</string>
    <string name="rate_us">Rate Us</string>

</resources>