<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/drawer_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon"/>

        <item
            android:id="@+id/drawer_share"
            android:title="@string/share"
            android:icon="@drawable/share_icon"/>

        <item
            android:id="@+id/drawer_about"
            android:title="@string/about_us"
            android:icon="@drawable/info_icon"/>

    </group>

    <item
        android:title="">

        <menu>

            <item
                android:id="@+id/drawer_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_icon"/>

        </menu>

    </item>
</menu>