<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        android:fontFamily="@font/poppinsregular"/>

    <item
        android:id="@+id/category"
        android:title="@string/my_category"
        android:icon="@drawable/category_icon"
        android:fontFamily="@font/poppinsregular"/>

    <item
        android:id="@+id/order"
        android:title="@string/order"
        android:icon="@drawable/order"
        android:fontFamily="@font/poppinsregular"/>


    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/person_icon"
        android:fontFamily="@font/poppinsregular"/>

</menu>