<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileactivities.PrivacyPolicyActivity"
    android:orientation="vertical"
    android:background="@color/backgroun">

    <ImageView
        android:id="@+id/toolbar"
        android:layout_width="25sp"
        android:layout_marginTop="10sp"
        android:layout_height="23sp"
        android:layout_marginStart="10sp"
        android:layout_centerVertical="true"
        android:background="@drawable/back_icon" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicy"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_we_collect"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicyWe"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_of_your_information"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicyYou"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_dhruv"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_prince"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_ashish"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>