<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfirmOrderDetailsActivity"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:background="@drawable/background_image_details">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <TextView
                android:id="@+id/confirmOrderProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/confirmOrderProductPFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="#6a7272"
                    android:text="@string/nike"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppinssemibold"/>

                <TextView
                    android:id="@+id/confirmOrderProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="21sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/confirmOrderProductSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_size"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/confirmOrderProductOrderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/description"
                android:fontFamily="@font/poppinsregular"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginVertical="30dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_details"
                android:layout_marginStart="25dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:id="@+id/confirmOrderProductOrderEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/email"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/confirmOrderProductOrderNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="9021323243423"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliver_to"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:id="@+id/confirmOrderProductOrderAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/address"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:id="@+id/confirmOrderProductOrderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="22/3/3333"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arriving_date"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"/>

            <TextView
                android:id="@+id/confirmOrderProductArrivingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:textColor="#00FF0A"
                android:textSize="14sp"
                android:text="Delivery Completed At "
                android:fontFamily="@font/poppinsregular"/>



        </LinearLayout>

    </ScrollView>



</LinearLayout>