<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".OrderPaymentScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Step Indicator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/details"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="#A9A9A9" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="#A9A9A9" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment"
                android:textColor="#000000"
                android:fontFamily="@font/poppinssemibold"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/summary"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="#A9A9A9" />

        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A9A9A9" />

        <TextView
            android:id="@+id/txtSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subtotal: "
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppinssemibold"
            android:layout_marginTop="30dp"/>

        <!-- Select Payment Method Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/select_payment_method"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppinssemibold"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbDebitCreditCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Debit/Credit Card"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsregular"/>

            <RadioButton
                android:id="@+id/rbGPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GPay"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsregular"/>

            <RadioButton
                android:id="@+id/rbPhonePay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="PhonePay"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbNetBanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Net Banking"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsregular"/>

            <RadioButton
                android:id="@+id/rbWallets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wallets"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsregular"/>

            <RadioButton
                android:id="@+id/rbCashOnDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cash On Delivery"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsregular"/>

        </RadioGroup>

        <!-- Place Order Button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/OrderButton"
                            android:layout_width="160sp"
                            android:layout_height="45sp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10sp"
                            android:gravity="center"
                            android:backgroundTint="@color/blue"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppinssemibold"
                            android:text="@string/order"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
